tests/unit/parser/invalid-problems/multiple-goals-without-requirement.pddl
; goals section (4:10) defined, but `:multiple-goals` does not appear in requirements section
(define (problem multiple-goals-without-requirement)
        (:domain invalid-problems-domain)
        (:goals))